# TerminalAgent

./: .gitignore  LICENSE  README.md  pyproject.toml
.agent/: README.md
.agent/models/: local.yaml  profiles.yaml  providers.yaml
.agent/plans/: sample_plan.md
.agent/prompts/: system.md
.agent/security/: roles.yaml  users.yaml
.agent/skills/automation_ops/: SKILL.md
.agent/skills/git_ops/: SKILL.md
.agent/skills/shell_ops/: SKILL.md
src/terminal_agent/: __init__.py  cli.py  config.py  executor.py  llm.py  local_llm.py  main.py  paths.py  planner.py  secret_store.py  setup.py  skill_loader.py  storage.py
src/terminal_agent/tools/: __init__.py  files.py  git.py  registry.py  shell.py
